--- a/app/views/lost/otherpassport.html
+++ b/app/views/lost/otherpassport.html
@@ -8,30 +8,29 @@ FCO ETD Online Prototype
 	<div class="grid-row">
 		<div class="column-two-thirds">
 			<h1 class="heading-large">
-				Local police report
+				Previously reported lost or stolen passports
 	  	  	</h1>
 	  	  
-			<p>If your passport has been stolen and you have reported it to the police, we'll need your local police report details so that we can issue an emergency travel document.
-
 			<div class="form-group">
 				<h2 class="heading-small">
-				Have you told the local police?
+				Have you previously reported any other lost or stolen passports?
+?
 	  	  	</h2>
 			  <fieldset>
 				<legend class="visually-hidden">Are you a British citizen?</legend>
 					<div class="multiple-choice">
-					  <input id="radio-1" name="radio-group" value="Yes" aria-controls="police-yes" data-target="police-yes" type="radio">
+					  <input id="radio-1" name="radio-group" value="Yes" aria-controls="passports-yes" data-target="passports-yes" type="radio">
 					  <label for="radio-1">Yes</label>
 					</div>
 					<!--<p class="form-block">or</p>-->
 					<div class="multiple-choice">
-					  <input id="radio-2" name="radio-group" value="No" aria-controls="police-no" data-target="police-no" type="radio">
+					  <input id="radio-2" name="radio-group" value="No" aria-controls="passports-no" data-target="passports-no" type="radio">
 					  <label for="radio-2">No</label>
 					</div>
 			  </fieldset>
        		</div>
 						
-			<div class="clear-both"><p><a class="button" href="otherpassport.html" role="button">Next</a></p></div>
+			<div class="clear-both"><p><a class="button" href="yourdetails.html" role="button">Next</a></p></div>
 			
 		</div>	  	  	
 	  
