--- a/app/views/expired/booked.html
+++ b/app/views/expired/booked.html
@@ -40,7 +40,7 @@
  </fieldset>
           </div>
             
-      <div class="clear-both"><p><a class="button" href="where.html" role="button">Next</a></p></div>
+      <div class="clear-both"><hr><p><a class="button" href="where.html" role="button">Next</a></p></div>
       
            
 
