--- a/app/views/expired/tasklist2.html
+++ b/app/views/expired/tasklist2.html
@@ -21,33 +21,35 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="booked" aria-describedby="application">
+              <a class="task-name" href="completed" aria-describedby="eligibility-completed">
                 Enter your journey details
               </a>
-              
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="passport" aria-describedby="passport">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Tell us what happened to your passport
               </a>
-                        </li>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+            </li>
 
               <li class="task-list-item">
-              <a class="task-name" href="yourdetails" aria-describedby="details">
+              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
                 Enter your details
               </a>
-         
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
             </li>
               <li class="task-list-item">
-              <a class="task-name" aria-describedby="pay">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Pay for your emergency travel document
               </a>
-         </li>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+            </li>
                  <li class="task-list-item">
-              <a class="task-name"  aria-describedby="read-declaration">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Read terms and conditions and confirm application details
               </a>
-              
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
             </li>
           </ul>
         </li>
@@ -57,41 +59,42 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" aria-describedby="photo">
+              <a class="task-name" href="#" aria-describedby="company-information-completed">
                 Add photo
               </a>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name"  aria-describedby="travel">
-                Add travel tickets or booking confirmation (if you have travel booked)
+              <a class="task-name" href="#" aria-describedby="contact-details-completed">
+                Add travel tickets or booking confirmation 
               </a>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name"  aria-describedby="police">
-                Add police report (if your passport is lost or stolen and you have reported it to the police)
+              <a class="task-name" href="#">
+                Add police report 
               </a>
             </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="residency">
-                Add proof of residency (if your final destination is outside of the EU)
-              </a>
+         
+
+              
             </li>
-   
           </ul>
         </li>
         <li>
+        <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name"  aria-describedby="consent">
-                Find out when and where to collect your emergency travel document
+              <a class="task-name" href="#" aria-describedby="consent">
+                Book appointment
               </a>
             </li>
-
+             <li class="task-list-item">
+              <a class="task-name" href="#" aria-describedby="collect">
+                Bring us your old passport
               </a>
             </li>
           </ul>
