--- a/app/views/expired/whytravel.html
+++ b/app/views/expired/whytravel.html
@@ -10,7 +10,7 @@ FCO ETD Online Prototype
 			<h1 class="heading-large">
 				Why do you need to travel?
 	  	  	</h1>
-	  	  
+	  	  	<hr>
 			<div class="form-group">
 			  <fieldset>
 			  
@@ -56,7 +56,7 @@ FCO ETD Online Prototype
   			  </fieldset>
        		</div>
 						
-			<div class="clear-both"><p><a class="button" href="tasklistjourneycomplete" role="button">Next</a></p></div>
+			<div class="clear-both"><hr><p><a class="button" href="tasklistjourneycomplete" role="button">Next</a></p></div>
 			
 		</div>	  	  	
 	  
