--- a/app/views/lost/otherpassport.html
+++ b/app/views/lost/otherpassport.html
@@ -14,7 +14,7 @@ FCO ETD Online Prototype
 			<div class="form-group">
 				<h2 class="heading-small">
 				Have you previously reported any other lost or stolen passports?
-?
+
 	  	  	</h2>
 			  <fieldset>
 				<legend class="visually-hidden">Are you a British citizen?</legend>
@@ -30,7 +30,7 @@ FCO ETD Online Prototype
 			  </fieldset>
        		</div>
 						
-			<div class="clear-both"><p><a class="button" href="yourdetails.html" role="button">Next</a></p></div>
+			<div class="clear-both"><p><a class="button" href="tasklistpassportcomplete.html" role="button">Next</a></p></div>
 			
 		</div>	  	  	
 	  
