--- a/app/views/lost/tasklistjourneycomplete.html
+++ b/app/views/lost/tasklistjourneycomplete.html
@@ -24,6 +24,7 @@
               <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
@@ -64,7 +65,7 @@
             </li>
             <li class="task-list-item">
               <a class="task-name"  aria-describedby="travel">
-                Add travel tickets or booking confirmation (if you have travel booked)
+                Add travel tickets or booking confirmation 
               </a>
               
             </li>
@@ -73,12 +74,8 @@
                 Add police report (if your passport is lost or stolen and you have reported it to the police)
               </a>
             </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="residency">
-                Add proof of residency (if your final destination is outside of the EU)
-              </a>
-            </li>
    
+ 
           </ul>
         </li>
         <li>
@@ -91,9 +88,7 @@
                 Find out when and where to collect your emergency travel document
               </a>
             </li>
-
-              </a>
-            </li>
+     
           </ul>
         </li>
       </ol>
