--- a/app/views/lost/tasklistpassportcomplete.html
+++ b/app/views/lost/tasklistpassportcomplete.html
@@ -24,12 +24,14 @@
               <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
                         </li>
 
               <li class="task-list-item">
@@ -73,12 +75,7 @@
                 Add police report (if your passport is lost or stolen and you have reported it to the police)
               </a>
             </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="residency">
-                Add proof of residency (if your final destination is outside of the EU)
-              </a>
-            </li>
-   
+
           </ul>
         </li>
         <li>
