--- a/app/views/expired/radio-buttons.html
+++ b/app/views/expired/radio-buttons.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_title %}
-  Have you got travel booked?
+  Example - Radio buttons
 {% endblock %}
 
 {% block content %}
@@ -13,36 +13,30 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-xlarge">
-        Tell us about your journey
+        Radio buttons
       </h1>
-<p>
-
-  Your journey will be printed in your emergency travel document. You can use an emergency travel document to travel to your final destination via up to 5 countries 
-</p>
 
       <form>
         <div class="form-group">
           <fieldset>
 
             <legend>
-              <h1 class="heading-medium">Have you got travel booked?</h1>
+              <h1 class="heading-medium">Where do you live?</h1>
             </legend>
 
             <div class="multiple-choice">
               <input id="radio-1" type="radio" name="radio-group" value="Northern Ireland">
-              <label for="radio-1">Yes</label>
+              <label for="radio-1">Northern Ireland</label>
             </div>
             <div class="multiple-choice">
               <input id="radio-2" type="radio" name="radio-group" value="Isle of Man or the Channel Islands">
-              <label for="radio-2">No</label>
+              <label for="radio-2">Isle of Man or the Channel Islands</label>
             </div>
-
- </fieldset>
-          </div>
-            
-      <div class="clear-both"><p><a class="button" href="where.html" role="button">Next</a></p></div>
-      
-           
+            <p class="form-block">or</p>
+            <div class="multiple-choice">
+              <input id="radio-3" type="radio" name="radio-group" value="I am a British citizen living abroad">
+              <label for="radio-3">I am a British citizen living abroad</label>
+            </div>
 
           </fieldset>
         </div>
