--- a/app/views/expired/tasklist1.html
+++ b/app/views/expired/tasklist1.html
@@ -67,31 +67,30 @@
                 Add travel tickets or booking confirmation (if you have travel booked)
               </a>
               
-            </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="police">
-                Add police report (if your passport is lost or stolen and you have reported it to the police)
-              </a>
+   
             </li>
             <li class="task-list-item">
               <a class="task-name"  aria-describedby="residency">
                 Add proof of residency (if your final destination is outside of the EU)
               </a>
+
+             
             </li>
-   
           </ul>
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
               <a class="task-name"  aria-describedby="consent">
-                Find out when and where to collect your emergency travel document
+                Book appointment
               </a>
             </li>
-
+             <li class="task-list-item">
+              <a class="task-name"  aria-describedby="collect">
+                Bring us your current passport
               </a>
             </li>
           </ul>
