--- a/app/views/expired/tasklistpassportcomplete.html
+++ b/app/views/expired/tasklistpassportcomplete.html
@@ -24,12 +24,14 @@
               <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
                         </li>
 
               <li class="task-list-item">
@@ -68,30 +70,24 @@
               </a>
               
             </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="police">
-                Add police report (if your passport is lost or stolen and you have reported it to the police)
-              </a>
-            </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="residency">
-                Add proof of residency (if your final destination is outside of the EU)
-              </a>
-            </li>
+
    
+
           </ul>
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
               <a class="task-name"  aria-describedby="consent">
-                Find out when and where to collect your emergency travel document
+                Book appointment
               </a>
             </li>
-
+             <li class="task-list-item">
+              <a class="task-name"  aria-describedby="collect">
+                Bring us your old passport
               </a>
             </li>
           </ul>
