--- a/app/views/lost/tasklistlost2.html
+++ b/app/views/lost/tasklistlost2.html
@@ -21,13 +21,13 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="eligibility-completed">
+              <a class="task-name" href="completed" aria-describedby="eligibility-completed">
                 Enter your journey details
               </a>
               <strong class="task-completed" id="eligibility-completed">Completed</strong>
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Tell us what happened to your passport
               </a>
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
@@ -40,13 +40,13 @@
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
             </li>
               <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Pay for your emergency travel document
               </a>
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
             </li>
                  <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Read terms and conditions and confirm application details
               </a>
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
@@ -66,25 +66,18 @@
             </li>
             <li class="task-list-item">
               <a class="task-name" href="#" aria-describedby="contact-details-completed">
-                Add travel tickets or booking confirmation (if you have travel booked)
+                Add travel tickets or booking confirmation 
               </a>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="#">
-                Add police report (if your passport is lost or stolen and you have reported it to the police)
+                Add police report 
               </a>
             </li>
-            <li class="task-list-item">
-              <a class="task-name" href="#">
-                Add proof of residency (if your final destination is outside of the EU)
-              </a>
-            </li>
-            <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="medical-information-completed">
-                Add consent letter (if both parents cannot attend an appointment with an applicant under 16)
-              </a>
-             
+         
+
+              
             </li>
           </ul>
         </li>
@@ -94,13 +87,11 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="#">
+              <a class="task-name" href="collect">
                 Find out when and where to collect your emergency travel document
               </a>
             </li>
-             <li class="task-list-item">
-              <a class="task-name" href="#">
-                Find out when and where to collect your emergency travel document
+       
               </a>
             </li>
           </ul>
