--- a/app/views/lost/tasklistpaymentcomplete.html
+++ b/app/views/lost/tasklistpaymentcomplete.html
@@ -24,27 +24,30 @@
               <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
                         </li>
 
               <li class="task-list-item">
               <a class="task-name" href="yourdetails" aria-describedby="details">
                 Enter your details
               </a>
-         
+         <strong class="task-completed" id="eligibility-completed">Completed</strong>
             </li>
               <li class="task-list-item">
-              <a class="task-name" aria-describedby="pay">
+              <a class="task-name" href="paymentoptions" aria-describedby="pay">
                 Pay for your emergency travel document
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
          </li>
                  <li class="task-list-item">
-              <a class="task-name"  aria-describedby="read-declaration">
+              <a class="task-name"  href="confirmation" aria-describedby="read-declaration">
                 Read terms and conditions and confirm application details
               </a>
               
@@ -73,12 +76,7 @@
                 Add police report (if your passport is lost or stolen and you have reported it to the police)
               </a>
             </li>
-            <li class="task-list-item">
-              <a class="task-name"  aria-describedby="residency">
-                Add proof of residency (if your final destination is outside of the EU)
-              </a>
-            </li>
-   
+
           </ul>
         </li>
         <li>
@@ -92,8 +90,6 @@
               </a>
             </li>
 
-              </a>
-            </li>
           </ul>
         </li>
       </ol>
