--- a/app/views/expired/tasklistphotocomplete.html
+++ b/app/views/expired/tasklistphotocomplete.html
@@ -59,21 +59,24 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="photo1" aria-describedby="company-information-completed">
+              <a class="task-name" href="#" aria-describedby="company-information-completed">
                 Add photo
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="#" aria-describedby="contact-details-completed">
                 Add travel tickets or booking confirmation 
               </a>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="#">
                 Add police report 
               </a>
+              <strong class="task-completed" id="eligibility-completed">completed</strong>
             </li>
          
 
@@ -82,19 +85,17 @@
           </ul>
         </li>
         <li>
-        <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="consent">
-                Book appointment
+              <a class="task-name" href="collect">
+                Find out when and where to collect your emergency travel document
               </a>
+              
             </li>
-             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="collect">
-                Bring us your old passport
+       
               </a>
             </li>
           </ul>
