--- a/app/views/expired/tasklistfinal.html
+++ b/app/views/expired/tasklistfinal.html
@@ -81,28 +81,33 @@
          
 
               
-            </li>
+        
           </ul>
-        </li>
-        <li>
+       
+   <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="collect">
-                Find out when and where to collect your emergency travel document
+              <a class="task-name" href="#" aria-describedby="consent">
+                Book appointment
               </a>
-              <strong class="task-completed" id="eligibility-completed">Offline task</strong>
+               <strong class="task-completed" id="eligibility-completed">completed</strong>
             </li>
-       
+             <li class="task-list-item">
+              <a class="task-name" href="#" aria-describedby="collect">
+                Bring us your old passport
               </a>
+               <strong class="task-completed" id="eligibility-completed">Offline task</strong>
             </li>
           </ul>
         </li>
       </ol>
 
-    </div>
+      </ol>
+
+
   </div>
 </main>
 
