--- a/app/views/expired/tasklistphotocomplete.html
+++ b/app/views/expired/tasklistphotocomplete.html
@@ -72,12 +72,7 @@
               <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
-            <li class="task-list-item">
-              <a class="task-name" href="#">
-                Add police report 
-              </a>
-              <strong class="task-completed" id="eligibility-completed">completed</strong>
-            </li>
+  
          
 
               
@@ -86,14 +81,20 @@
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
               <a class="task-name" href="collect">
-                Find out when and where to collect your emergency travel document
+                Book appointment
               </a>
               
+            </li>
+
+            <li class="task-list-item">
+              <a class="task-name" href="#" aria-describedby="collect">
+                Bring us your old passport
+              </a>
             </li>
        
               </a>
