add bring passport

--- a/app/views/expired/collect.html
+++ b/app/views/expired/collect.html
@@ -13,24 +13,17 @@
       <a class="link-back" href="/url/of/previous/page">Back</a>
 
       <h1 class="heading-large">
-        Collection details
+        Your old passport
 </h1>
  
         <p>
 
-          We will check your application to make sure it's valid before issuing your emergency travel document.  It will normally be ready within two working days of us receiving your completed application including your photo and any necessary supporting documents. </p>
+         When you come to your appointment you must bring us your old passport. </p>
           <p>
 
-We will contact you within one working day to tell you when your emergency travel document is ready to collect.</p>
-<p>
+If you do not bring your old passport to your appointment, we will not be able to issue your emergency travel document<p>
 
-You will need to collect your emergency travel document from: <p> British Consulate Las Palmas de Gran Canaria.</p>
 
-Calle Luis Morote 6-3"</p>
-<p>
-  35007 Las Palmas de Gran Canaria </p>
-  <p>
-  Spain </p>
 
 
   <form>
@@ -41,14 +34,16 @@ Calle Luis Morote 6-3"</p>
 
             <div class="multiple-choice">
               <input id="nationalities-british" name="nationalities" type="checkbox" value="British">
-              <label for="nationalities-british">I will collect my emergency travel document when it is ready to collect</label>
+              <label for="nationalities-british">I will bring my old passport to my appointment</label>
             </div>
             
 
           </fieldset>
+          <p>
+          </p>
 
 <div class="form-group">
-    <a href="tasklistfinal" class="button">Complete application</a>
+    <a href="tasklistfinal" class="button">Next</a>
   </div>
       
 
