--- a/app/views/expired/tasklistphotocomplete.html
+++ b/app/views/expired/tasklistphotocomplete.html
@@ -92,7 +92,7 @@
             </li>
 
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="collect">
+              <a class="task-name" href="collect" aria-describedby="collect">
                 Bring us your old passport
               </a>
             </li>
