--- a/app/views/expired/paymentoptions.html
+++ b/app/views/expired/paymentoptions.html
@@ -53,7 +53,7 @@ Paying online will significantly speed up the application process.
   			  </fieldset>
        		</div>
 						
-			<div class="clear-both"><p><a class="button" href="tasklistpaymentcomplete" role="button">Next</a></p></div>
+			<div class="clear-both"><p><a class="button" href="https://production-1-production-pay-products-ui.cloudapps.digital/pay/6a0a77315d1a4013bd031b2a71b60b28" role="button">Next</a></p></div>
 			
 		</div>	  	  	
 	  
