--- a/app/views/expired/tasklist1.html
+++ b/app/views/expired/tasklist1.html
@@ -11,8 +11,11 @@
     <div class="column-two-thirds column-minimum">
 
       <h1 class="heading-large">
-        Emergency travel documents
+        Tasks to complete
       </h1>
+
+      <p>
+        To get your emergency travel document you must complete the steps below.  You will be able to return to your application at any point within the next 5 days to add your photo and supporting document, however will not be able to change any other parts of the application.
 
       <ol class="task-list">
         <li>
@@ -22,18 +25,24 @@
           <ul class="task-list-items">
             <li class="task-list-item">
               <a class="task-name" href="booked" aria-describedby="application">
+                Confirm eligibility
+              </a>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+              
+ <li class="task-list-item">
+              <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
-              
+
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="passport" aria-describedby="passport">
+              <a class="task-name" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
                         </li>
 
               <li class="task-list-item">
-              <a class="task-name" href="yourdetails" aria-describedby="details">
+              <a class="task-name"  aria-describedby="details">
                 Enter your details
               </a>
          
