--- a/app/views/expired/whytravel.html
+++ b/app/views/expired/whytravel.html
@@ -56,7 +56,7 @@ FCO ETD Online Prototype
   			  </fieldset>
        		</div>
 						
-			<div class="clear-both"><hr><p><a class="button" href="tasklistjourneycomplete" role="button">Next</a></p></div>
+			<div class="clear-both"><hr><p><a class="button" href="tasklist2" role="button">Next</a></p></div>
 			
 		</div>	  	  	
 	  
