--- a/app/views/expired/otherinfo.html
+++ b/app/views/expired/otherinfo.html
@@ -26,7 +26,7 @@
   
 
     <div class="form-group">
-       <a class="button button-start" href="tasklistdetailscomplete">next</a>
+       <a class="button button-start" href="tasklist4">next</a>
     </div>
 
   </form>
