--- a/app/views/expired/tasklist20.html
+++ b/app/views/expired/tasklist20.html
@@ -11,11 +11,8 @@
     <div class="column-two-thirds column-minimum">
 
       <h1 class="heading-large">
-        Tasks to complete
+        Emergency travel documents
       </h1>
-
-      <p>
-        To get your emergency travel document you must complete the steps below.  You will be able to return to your application at any point within the next 5 days to add your photo and supporting document, however will not be able to change any other parts of the application.
 
       <ol class="task-list">
         <li>
@@ -24,40 +21,35 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="application">
-                Confirm eligibility
-              </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
-              
- <li class="task-list-item">
-              <a class="task-name" href="booked" aria-describedby="application">
+              <a class="task-name" href="completed" aria-describedby="eligibility-completed">
                 Enter your journey details
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
-
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="passport" aria-describedby="passport">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Tell us what happened to your passport
               </a>
-                        </li>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+            </li>
 
               <li class="task-list-item">
-              <a class="task-name"  aria-describedby="details">
+              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
                 Enter your details
               </a>
-         
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
             </li>
               <li class="task-list-item">
-              <a class="task-name" aria-describedby="pay">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Pay for your emergency travel document
               </a>
-         </li>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+            </li>
                  <li class="task-list-item">
-              <a class="task-name"  aria-describedby="read-declaration">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Read terms and conditions and confirm application details
               </a>
-              
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
             </li>
           </ul>
         </li>
@@ -67,36 +59,37 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" aria-describedby="photo">
+              <a class="task-name" href="photo1" aria-describedby="company-information-completed">
                 Add photo
               </a>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name"  aria-describedby="travel">
-                Add travel tickets or booking confirmation (if you have travel booked)
+              <a class="task-name" href="#" aria-describedby="contact-details-completed">
+                Add travel tickets or booking confirmation 
               </a>
               
-   
-     
+            </li>
+        
 
-             
+              
             </li>
           </ul>
         </li>
         <li>
+        <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Complete application and collect emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name"  aria-describedby="consent">
+              <a class="task-name" href="#" aria-describedby="consent">
                 Book appointment
               </a>
             </li>
              <li class="task-list-item">
-              <a class="task-name"  aria-describedby="collect">
-                Bring us your current passport
+              <a class="task-name" href="#" aria-describedby="collect">
+                Bring us your old passport
               </a>
             </li>
           </ul>
