--- a/app/views/expired/tasklist3.html
+++ b/app/views/expired/tasklist3.html
@@ -40,10 +40,11 @@
               <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
                         </li>
 
               <li class="task-list-item">
-              <a class="task-name"  aria-describedby="details">
+              <a class="task-name" href="yourdetails" aria-describedby="details">
                 Enter your details
               </a>
          
@@ -78,8 +79,8 @@
               </a>
               
    
-     
-
+            </li>
+          
              
             </li>
           </ul>
