--- a/app/views/expired/tasklist4.html
+++ b/app/views/expired/tasklist4.html
@@ -40,16 +40,18 @@
               <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
                         </li>
 
               <li class="task-list-item">
-              <a class="task-name"  aria-describedby="details">
+              <a class="task-name" href="yourdetails" aria-describedby="details">
                 Enter your details
               </a>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
          
             </li>
               <li class="task-list-item">
-              <a class="task-name" aria-describedby="pay">
+              <a class="task-name" href="paymentoptions" aria-describedby="pay">
                 Pay for your emergency travel document
               </a>
          </li>
@@ -78,8 +80,8 @@
               </a>
               
    
-     
-
+            </li>
+          
              
             </li>
           </ul>
