--- a/app/views/expired/xxxtasklistpaymentcomplete.html
+++ b/app/views/expired/xxxtasklistpaymentcomplete.html
@@ -54,11 +54,11 @@
               <a class="task-name" href="paymentoptions" aria-describedby="pay">
                 Pay for your emergency travel document
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
          </li>
                  <li class="task-list-item">
-              <a class="task-name" href="confirm" aria-describedby="read-declaration">
-                Read terms and conditions and confirm application details
+              <a class="task-name" href="confirmation" aria-describedby="read-declaration">
+                Review application and confirm application details
               </a>
               
             </li>
