--- a/app/views/expired/photo1.html
+++ b/app/views/expired/photo1.html
@@ -60,9 +60,9 @@
 
          <br/>
           <details>
-                <summary><span class="summary js-gaevent" data-galabel="details" data-gakey="printed photo">Send a link to the device I'm using to upload the photo</span></summary>
+                <summary><span class="summary js-gaevent" data-galabel="details" data-gakey="printed photo">Send a link to the device I'm using to take the photo</span></summary>
                 <div class="panel panel-border-narrow">
-                    <p>You can text or email a link to the device you are using to take the photo. If a friend is using their phone to take photo of you, enter their phone number here.</p>
+                    <p>We have already sent a link to the email address you privided in your application. You can text or email a link to the device you are using to take the photo. If a friend is using their phone to take photo of you, enter their phone number here.</p>
                     
                      <form class="form">
 
