--- a/app/views/expired/tasklistphotocomplete.html
+++ b/app/views/expired/tasklistphotocomplete.html
@@ -66,10 +66,10 @@
               
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="contact-details-completed">
+              <a class="task-name" href="travelticket" aria-describedby="contact-details-completed">
                 Add travel tickets or booking confirmation 
               </a>
-              <strong class="task-completed" id="eligibility-completed">Completed</strong>
+            
               
             </li>
   
