--- a/app/views/expired/photo1.html
+++ b/app/views/expired/photo1.html
@@ -82,6 +82,11 @@ Calle Mauricio Moro Pareto, 2
 Edificio Eurocom
 29006 Malaga 
 Spain.</p>
+
+<div class="multiple-choice" data-target="example-different-country">
+              <input id="nationalities-other" name="nationalities" type="checkbox" value="Citizen of a different country">
+              <label for="nationalities-other">I will post a photo.</label>
+            </div>
                 </div>
             </details>
       
@@ -100,6 +105,11 @@ Edificio Eurocom
 29006 Malaga 
 Spain
 
+<div class="multiple-choice" data-target="example-different-country">
+              <input id="nationalities-other" name="nationalities" type="checkbox" value="Citizen of a different country">
+              <label for="nationalities-other">I will post a photo.</label>
+            </div>
+
                     </p>
                 </div>
             </details>
@@ -113,7 +123,7 @@ Spain
     <div class="column-two-thirds">
       <br>
       <p>
-        <a class="button button-start" href="photo2" role="button">Next - add photo ></a>
+        <a class="button button-start" href="photo2" role="button">Next></a>
           
 </p>
             </div>
