--- a/app/views/expired/tasklist6.html
+++ b/app/views/expired/tasklist6.html
@@ -74,14 +74,14 @@
               <a class="task-name" href="photo1" aria-describedby="photo">
                 Add photo
               </a>
-              
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
               <a class="task-name" href="photo1" aria-describedby="travel">
                 Add travel tickets or booking confirmation (if you have travel booked)
               </a>
-              
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
    
             </li>
           
