--- a/app/views/expired/travelticket.html
+++ b/app/views/expired/travelticket.html
@@ -47,15 +47,14 @@
 
 
 
- <a style="float: right" class="button button-start" href="photo3" role="button">Next  ></a>
-</form>
+
 
 <div> &nbsp; </div>
 
 <div> &nbsp; </div><div> &nbsp; </div><div> &nbsp; </div>
 
 
-<div class="grid-row">
+
 
   <div> </div>
 
@@ -78,13 +77,13 @@
 
       
             <details>
-                <summary><span class="summary js-gaevent" data-galabel="details" data-gakey="printed photo">I can't add a photo</span></summary>
+                <summary><span class="summary js-gaevent" data-galabel="details" data-gakey="printed photo">I can't add a file</span></summary>
                 <div class="panel panel-border-narrow">
-                    <p> You can add a photo at any time over the next 5 days.  We will not be able to process your application until a photo has been added.</p><p> You could consider asking someone to help you take your photo such as a holiday rep or hotel staff.  Many photo shops will also offer a digital photo service.</p> <p>
+                    <p> You can add a file at any time over the next 5 days.  We will not be able to process your application until this file has been added.</p><p> You could consider asking someone to help you photograph your documents, such as a holiday rep or hotel staff.  .</p> <p>
 
 
                 
-                If you cannot take a digital photo you can send  a physical photo however this will delay your application.  Photos can be sent to:
+                If you cannot add files, you can send physical documents, however this will delay your application.  Documents can be sent to:
 
                       British Consulate Malaga
 Calle Mauricio Moro Pareto, 2 
@@ -92,7 +91,18 @@ Edificio Eurocom
 29006 Malaga 
 Spain
 
-</p></div>
+<div class="multiple-choice" data-target="example-different-country">
+              <input id="nationalities-other" name="nationalities" type="checkbox" value="Citizen of a different country">
+              <label for="nationalities-other">I will post my documents.</label>
+            </div>
+
+
+</p></div></details></form></div> <div> &nbsp; </div>
+
+<div class="column-two-thirds">
+   <a  class="button button-start" href="tasklist6" role="button">Next  ></a>
+</form>
+
 
 
                     </p>
