add alternative tasklist

--- a/app/views/ed/index.html
+++ b/app/views/ed/index.html
@@ -32,12 +32,11 @@
 
       <p>You can change the service name by editing the file '/app/config.js'.</p>
 
-			<h2 class="heading-medium">Journeys</h2>
+			<h2 class="heading-medium">Examples and documentation</h2>
 
 			<ul class="list list-bullet">
-				<li><a href="lost/intro-howitworks">Lost</a></li>
-				<li><a href="expired/intro-howitworks">Expired</a></li>
-				<li><a href="ed/intro-howitworks">Tasklist 2</a></li>
+				<li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
+				<li><a href="https://github.com/alphagov/govuk_prototype_kit">GitHub</a></li>
 			</ul>
 
       <h2 class="heading-medium">Other resources</h2>
