--- a/app/views/ed/tasklistdetailscomplete.html
+++ b/app/views/ed/tasklistdetailscomplete.html
@@ -21,35 +21,35 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="eligibility-completed">
+              <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
               <strong class="task-completed" id="eligibility-completed">Completed</strong>
+              
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
-            </li>
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
+                        </li>
 
               <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="yourdetails" aria-describedby="details">
                 Enter your details
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+         <strong class="task-completed" id="eligibility-completed">Completed</strong>
             </li>
               <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="paymentoptions" aria-describedby="pay">
                 Pay for your emergency travel document
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
-            </li>
+         </li>
                  <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
+              <a class="task-name"  aria-describedby="read-declaration">
                 Read terms and conditions and confirm application details
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+              
             </li>
           </ul>
         </li>
@@ -59,44 +59,37 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="company-information-completed">
+              <a class="task-name" aria-describedby="photo">
                 Add photo
               </a>
-              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="travelticket" aria-describedby="contact-details-completed">
-                Add travel tickets or booking confirmation 
+              <a class="task-name"  aria-describedby="travel">
+                Add travel tickets or booking confirmation (if you have travel booked)
               </a>
-            
               
             </li>
-  
-         
-
-              
+   
+   
+      
+             
             </li>
           </ul>
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete your application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="appointment">
+              <a class="task-name"  aria-describedby="consent">
                 Book appointment
               </a>
-              
             </li>
-
-            <li class="task-list-item">
-              <a class="task-name" href="collect" aria-describedby="collect">
-                Bring us your old passport
-              </a>
-            </li>
-       
+             <li class="task-list-item">
+              <a class="task-name"  aria-describedby="collect">
+                Bring us your old passport 
               </a>
             </li>
           </ul>
