--- a/app/views/ed/tasklistfinal.html
+++ b/app/views/ed/tasklistfinal.html
@@ -66,44 +66,48 @@
               
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="travelticket" aria-describedby="contact-details-completed">
+              <a class="task-name" href="#" aria-describedby="contact-details-completed">
                 Add travel tickets or booking confirmation 
               </a>
-            
+              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
-  
+            <li class="task-list-item">
+              <a class="task-name" href="#">
+                Add police report 
+              </a>
+              <strong class="task-completed" id="eligibility-completed">completed</strong>
+            </li>
          
 
               
-            </li>
+        
           </ul>
-        </li>
-        <li>
+       
+   <li>
           <h2 class="task-list-section">
             <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="appointment">
+              <a class="task-name" href="#" aria-describedby="consent">
                 Book appointment
               </a>
-              
+               <strong class="task-completed" id="eligibility-completed">completed</strong>
             </li>
-
-            <li class="task-list-item">
-              <a class="task-name" href="collect" aria-describedby="collect">
+             <li class="task-list-item">
+              <a class="task-name" href="#" aria-describedby="collect">
                 Bring us your old passport
               </a>
-            </li>
-       
-              </a>
+               <strong class="task-completed" id="eligibility-completed">Offline task</strong>
             </li>
           </ul>
         </li>
       </ol>
 
-    </div>
+      </ol>
+
+
   </div>
 </main>
 
