--- a/app/views/ed/tasklistlost2.html
+++ b/app/views/ed/tasklistlost2.html
@@ -59,20 +59,22 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="company-information-completed">
+              <a class="task-name" href="photo1" aria-describedby="company-information-completed">
                 Add photo
               </a>
-              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="travelticket" aria-describedby="contact-details-completed">
+              <a class="task-name" href="#" aria-describedby="contact-details-completed">
                 Add travel tickets or booking confirmation 
               </a>
-            
               
             </li>
-  
+            <li class="task-list-item">
+              <a class="task-name" href="#">
+                Add police report 
+              </a>
+            </li>
          
 
               
@@ -81,19 +83,12 @@
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="appointment">
-                Book appointment
-              </a>
-              
-            </li>
-
-            <li class="task-list-item">
-              <a class="task-name" href="collect" aria-describedby="collect">
-                Bring us your old passport
+              <a class="task-name" href="collect">
+                Find out when and where to collect your emergency travel document
               </a>
             </li>
        
