--- a/app/views/ed/taskliststraightforward.html
+++ b/app/views/ed/taskliststraightforward.html
@@ -34,7 +34,7 @@
             </li>
 
               <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
                 Enter your details
               </a>
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
@@ -62,41 +62,45 @@
               <a class="task-name" href="#" aria-describedby="company-information-completed">
                 Add photo
               </a>
-              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="travelticket" aria-describedby="contact-details-completed">
-                Add travel tickets or booking confirmation 
+              <a class="task-name" href="#" aria-describedby="contact-details-completed">
+                Add travel tickets or booking confirmation (if you have travel booked)
               </a>
-            
               
             </li>
-  
-         
-
-              
+            <li class="task-list-item">
+              <a class="task-name" href="#">
+                Add police report (if your passport is lost or stolen and you have reported it to the police)
+              </a>
+            </li>
+            <li class="task-list-item">
+              <a class="task-name" href="#">
+                Add proof of residency (if your final destination is outside of the EU)
+              </a>
+            </li>
+            <li class="task-list-item">
+              <a class="task-name" href="#" aria-describedby="medical-information-completed">
+                Add consent letter (if both parents cannot attend an appointment with an applicant under 16)
+              </a>
+             
             </li>
           </ul>
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Collect your emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="appointment">
-                Book appointment
-              </a>
-              
-            </li>
-
-            <li class="task-list-item">
-              <a class="task-name" href="collect" aria-describedby="collect">
-                Bring us your old passport
+              <a class="task-name" href="#">
+                Find out when and where to collect your emergency travel document
               </a>
             </li>
-       
+             <li class="task-list-item">
+              <a class="task-name" href="#">
+                Find out when and where to collect your emergency travel document
               </a>
             </li>
           </ul>
