--- a/app/views/ed/xxxtasklistpaymentcomplete.html
+++ b/app/views/ed/xxxtasklistpaymentcomplete.html
@@ -11,8 +11,11 @@
     <div class="column-two-thirds column-minimum">
 
       <h1 class="heading-large">
-        Emergency travel documents
+        Tasks to complete
       </h1>
+
+      <p>
+        To get your emergency travel document you must complete the steps below.  You will be able to return to your application at any point within the next 5 days to add your photo and supporting document, however will not be able to change any other parts of the application.
 
       <ol class="task-list">
         <li>
@@ -21,35 +24,43 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="eligibility-completed">
+              <a class="task-name" href="completed" aria-describedby="application">
+                Confirm eligibility
+              </a>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+              
+ <li class="task-list-item">
+              <a class="task-name" href="booked" aria-describedby="application">
                 Enter your journey details
               </a>
-              <strong class="task-completed" id="eligibility-completed">Completed</strong>
+              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="passport" aria-describedby="passport">
                 Tell us what happened to your passport
               </a>
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
-            </li>
+                        </li>
 
               <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="yourdetails" aria-describedby="details">
                 Enter your details
               </a>
               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+         
             </li>
               <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
+              <a class="task-name" href="paymentoptions" aria-describedby="pay">
                 Pay for your emergency travel document
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
-            </li>
+               <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+         </li>
                  <li class="task-list-item">
-              <a class="task-name" href="completed" aria-describedby="read-declaration-completed">
-                Read terms and conditions and confirm application details
+              <a class="task-name" href="confirmation" aria-describedby="read-declaration">
+                Review application and confirm application details
               </a>
-              <strong class="task-completed" id="read-declaration-completed">Completed</strong>
+              
             </li>
           </ul>
         </li>
@@ -59,44 +70,36 @@
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="#" aria-describedby="company-information-completed">
+              <a class="task-name" aria-describedby="photo">
                 Add photo
               </a>
-              <strong class="task-completed" id="eligibility-completed">Completed</strong>
               
             </li>
             <li class="task-list-item">
-              <a class="task-name" href="travelticket" aria-describedby="contact-details-completed">
-                Add travel tickets or booking confirmation 
+              <a class="task-name"  aria-describedby="travel">
+                Add travel tickets or booking confirmation (if you have travel booked)
               </a>
-            
               
+   
             </li>
-  
-         
-
-              
+          
+             
             </li>
           </ul>
         </li>
         <li>
           <h2 class="task-list-section">
-            <span class="task-list-section-number">3. </span> Complete application and collect your emergency travel document
+            <span class="task-list-section-number">3. </span> Complete application and collect emergency travel document
           </h2>
           <ul class="task-list-items">
             <li class="task-list-item">
-              <a class="task-name" href="appointment">
+              <a class="task-name"  aria-describedby="consent">
                 Book appointment
               </a>
-              
             </li>
-
-            <li class="task-list-item">
-              <a class="task-name" href="collect" aria-describedby="collect">
-                Bring us your old passport
-              </a>
-            </li>
-       
+             <li class="task-list-item">
+              <a class="task-name"  aria-describedby="collect">
+                Bring us your current passport
               </a>
             </li>
           </ul>
